Debug misaligned background

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <header class="full-width">
             <div class="half-width">
                 <h1>Jubilee Austen</h1>
-                <h1><span>Hi,</span> I'm a developer that loves clean & elegant code.</h1>
+                <h1><span>Hi,</span> I'm a developer that loves clean & elegant code.</h1>       
             </div>
+            <div>
 
+            </div>
             <div class="half-width">
                 <nav>
                     <ul>
@@ -24,7 +26,7 @@
                       <li><a href="#contact">Contact</a></li>
                    </ul>
                 </nav>
-            </div>
+            </div>   
         </header>
 
         <main>
